[gd_scene load_steps=4 format=3 uid="uid://cvusu82wn78es"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_aydig"]
[ext_resource type="Texture2D" uid="uid://dtoqr4aw10wxi" path="res://assets/Grid.png" id="1_dnbvq"]
[ext_resource type="Texture2D" uid="uid://dqte4oi8ee8k1" path="res://assets/Popup.png" id="3_087w0"]

[node name="board" type="Node2D"]
script = ExtResource("1_aydig")

[node name="board" type="Sprite2D" parent="."]
texture = ExtResource("1_dnbvq")
centered = false

[node name="slots" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 798.0
offset_bottom = 798.0

[node name="slot_0" type="Sprite2D" parent="slots"]
position = Vector2(137, 137)

[node name="slot_1" type="Sprite2D" parent="slots"]
position = Vector2(399, 137)

[node name="slot_2" type="Sprite2D" parent="slots"]
position = Vector2(661, 137)

[node name="slot_3" type="Sprite2D" parent="slots"]
position = Vector2(137, 399)

[node name="slot_4" type="Sprite2D" parent="slots"]
position = Vector2(399, 399)

[node name="slot_5" type="Sprite2D" parent="slots"]
position = Vector2(661, 399)

[node name="slot_6" type="Sprite2D" parent="slots"]
position = Vector2(137, 661)

[node name="slot_7" type="Sprite2D" parent="slots"]
position = Vector2(399, 661)

[node name="slot_8" type="Sprite2D" parent="slots"]
position = Vector2(661, 661)

[node name="buttons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 798.0
offset_bottom = 798.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="0" type="Button" parent="buttons"]
layout_mode = 0
offset_left = 12.0
offset_top = 12.0
offset_right = 262.0
offset_bottom = 262.0
focus_mode = 0

[node name="1" type="Button" parent="buttons"]
layout_mode = 0
offset_left = 274.0
offset_top = 12.0
offset_right = 524.0
offset_bottom = 262.0
focus_mode = 0

[node name="2" type="Button" parent="buttons"]
layout_mode = 0
offset_left = 536.0
offset_top = 12.0
offset_right = 786.0
offset_bottom = 262.0
focus_mode = 0

[node name="3" type="Button" parent="buttons"]
layout_mode = 0
offset_left = 12.0
offset_top = 274.0
offset_right = 262.0
offset_bottom = 524.0
focus_mode = 0

[node name="4" type="Button" parent="buttons"]
layout_mode = 0
offset_left = 274.0
offset_top = 274.0
offset_right = 524.0
offset_bottom = 524.0
focus_mode = 0

[node name="5" type="Button" parent="buttons"]
layout_mode = 0
offset_left = 536.0
offset_top = 274.0
offset_right = 786.0
offset_bottom = 524.0
focus_mode = 0

[node name="6" type="Button" parent="buttons"]
layout_mode = 0
offset_left = 12.0
offset_top = 536.0
offset_right = 262.0
offset_bottom = 786.0
focus_mode = 0

[node name="7" type="Button" parent="buttons"]
layout_mode = 0
offset_left = 274.0
offset_top = 536.0
offset_right = 524.0
offset_bottom = 786.0
focus_mode = 0

[node name="8" type="Button" parent="buttons"]
layout_mode = 0
offset_left = 536.0
offset_top = 536.0
offset_right = 786.0
offset_bottom = 786.0
focus_mode = 0

[node name="end_of_game_windows" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 795.0
offset_bottom = 798.0

[node name="popup_sprite" type="Sprite2D" parent="end_of_game_windows"]
position = Vector2(399, 399)
texture = ExtResource("3_087w0")

[node name="RetryButton" type="Button" parent="end_of_game_windows"]
layout_mode = 0
offset_left = 199.0
offset_top = 318.0
offset_right = 599.0
offset_bottom = 418.0
text = "Play Again"

[node name="return_to_menu" type="Button" parent="end_of_game_windows"]
layout_mode = 0
offset_left = 199.0
offset_top = 430.0
offset_right = 599.0
offset_bottom = 530.0
text = "Return to menu"

[node name="game_result" type="Label" parent="end_of_game_windows"]
layout_mode = 0
offset_left = 85.0
offset_top = 239.0
offset_right = 713.0
offset_bottom = 303.0
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="end_of_game_windows/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="end_of_game_windows/return_to_menu" to="." method="_on_return_to_menu_pressed"]
